--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,11 +1,18 @@
-<html>
-    <head>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
       {% eleventyGoogleFonts 'https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;600&display=swap' %}
         <style>
             {% include "css/styles.css" ignore missing %}
             
         </style>
         <title>Dave Hearne :: Personal Site</title>
+        <meta name="description" content="Personal Site of Dave Hearne , UX design and development">
+        <meta name="author" content="Dave Hearne">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>    
     <body>
         <div class = "main-content">
