--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,13 +1,16 @@
 body{
+    font-family: 'Work Sans', sans-serif;
     background: #0d1117;
     color: white;
+    height: 100vh;
+    padding: 0;
 
     .main-content{
-        font-family: 'Work Sans', sans-serif;
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
+        justify-content: center;
         flex-direction: row;
         flex-wrap: wrap;
         row-gap: 5px;
