--- a/posts.njk
+++ b/posts.njk
@@ -1,6 +1,7 @@
 --- 
 layout: layouts/base.njk 
 permalink: /posts/ 
+title: Random Thoughts 💭
 ---
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
