--- a/index.njk
+++ b/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
 permalink: /
-title: Hi, I'm Dave 👋
+title: Hi! I'm Dave 👋
 ---
-UX Designer and Developer
+I'm a developer, designer and UX researcher.
