--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,7 @@
 body{
     font-family: 'Work Sans', sans-serif;
-    background: #0d1117;
+    background:linear-gradient(rgb(15, 32, 39), rgb(32, 58, 67), rgb(44, 83, 100));
+    //background: #0d1117;
     color: white;
     height: 100vh;
     padding: 0;
