--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
       {% eleventyGoogleFonts 'https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;600&display=swap' %}
         <style>
-            {% include "scss/styles.css" ignore missing %}
+            {% include "css/styles.css" ignore missing %}
             
         </style>
         <title>Dave Hearne :: Personal Site</title>
